Upgrade libraries Upgrade Gradle Fix some minor issues raised by Sonar